// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountOverview should render a normal account 1`] = `
<div>
  <main>
    <header>
      <h1>
        Your accounts
      </h1>
      <p>
        You have $number$ accounts
      </p>
    </header>
    <a
      aria-label="Create new account"
      href="/account/NEW"
      title="Create new account"
    >
      ←
    </a>
    <section>
      <h2>
        My Sporran Account
      </h2>
      <button
        type="button"
      >
        Rename
      </button>
    </section>
    <a
      aria-label="My Second Account"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
      title="My Second Account"
    >
      →
    </a>
    <p>
      <span>
        Balance: 
        <span
          class="css-j3frhc"
        />
      </span>
    </p>
    <p>
      <a
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/send"
      >
        Send
      </a>
    </p>
    <p>
      <a
        href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire/receive"
      >
        Receive
      </a>
    </p>
    <p>
      1 account - Total balance: 0.0000 K
    </p>
  </main>
  ,
</div>
`;

exports[`AccountOverview should render the new account 1`] = `
<div>
  <main>
    <header>
      <h1>
        Your accounts
      </h1>
      <p>
        You have $number$ accounts
      </p>
    </header>
    <a
      aria-label="My Third Account"
      href="/account/4oyRTDhHL22Chv9T89Vv2TanfUxFzBnPeMuq4EFL3gUiHbtL"
      title="My Third Account"
    >
      ←
    </a>
    <section>
      <a
        href="/account/create"
      >
        <h2>
          Create new account
        </h2>
      </a>
      <p>
        or
      </p>
      <a
        href="/account/import"
      >
        Import an account from pre-existing phrase
      </a>
    </section>
    <a
      aria-label="My Sporran Account"
      href="/account/4tJbxxKqYRv3gDvY66BKyKzZheHEH8a27VBiMfeGX2iQrire"
      title="My Sporran Account"
    >
      →
    </a>
    <p>
      1 account - Total balance: 0.0000 K
    </p>
  </main>
  ,
</div>
`;
